[package]
name = "attalus"
version = "0.1.0"
authors = ["Michael Benfield <mike.benfield@gmail.com>"]

[lib]
name = "attalus"
path = "src/lib.rs"

[[bin]]
name = "attalus"
path = "src/main.rs"
doc = false

[dependencies]
sdl2 = "0.30"
rand = "0.3"
tempdir = "0.3"

[dev-dependencies]
quickcheck = "0.4"
