[package]
name = "attalus"
version = "0.1.0"
authors = ["Michael Benfield <mike.benfield@gmail.com>"]

[lib]
name = "attalus"
path = "src/lib.rs"

[[bin]]
name = "attalus"
path = "src/main.rs"
doc = false

[dependencies]
attalus_derive = { path = "attalus_derive" }
bitflags = "0.9"
sdl2 = "0.30"
rand = "0.3"
tempdir = "0.3"
serde = "1.0"
serde_derive = "1.0"
rlua = "0.9.2"
quick-error = "1.2.1"

[dev-dependencies]
quickcheck = "0.4"
