[package]
name = "attalus"
version = "0.1.0"
authors = ["Michael Benfield <mike.benfield@gmail.com>"]

[lib]
name = "attalus"
path = "src/lib.rs"

[dependencies]
attalus_derive = { path = "../attalus_derive" }
bitflags = "1.0"
sdl2 = "0.31"
rand = "0.3"
tempdir = "0.3"
serde = "1.0"
serde_derive = "1.0"
bincode = "0.9"
failure = "0.1"
