[package]
name = "attalus"
version = "0.1.0"
authors = ["Michael Benfield <mike.benfield@gmail.com>"]

[lib]
name = "attalus"
path = "src/lib.rs"

[dependencies]
bitflags = "1.0"
sdl2 = "0.31"
serde = "^1.0.34"
serde_derive = "^1.0"
bincode = "^1.0"
failure = "0.1"

[dev-dependencies]
rand = "0.3"
tempdir = "0.3"