[package]
name = "attalus"
version = "0.1.0"
authors = ["Michael Benfield <mike.benfield@gmail.com>"]

[lib]
name = "attalus"
path = "src/lib.rs"

[dependencies]
sdl2 = "0.31"
serde = { version = "^1.0.38", features = ["rc"] }
serde_derive = "^1.0"
bincode = "^1.0"
failure = "0.1"
chrono = "0.4"

[dev-dependencies]
rand = "0.3"
tempdir = "0.3"