[package]
name = "attalus_cli"
version = "0.1.0"
authors = ["Michael Benfield <mike.benfield@gmail.com>"]

[[bin]]
name = "attalus"
path = "src/main.rs"
doc = false

[dependencies]
attalus = { path = "../attalus" }
sdl2 = "0.31"
clap = "2.27"
failure = "0.1"

[target.'cfg(use_attalus_x64)'.dependencies]
attalus_x64 = { path = "../attalus_x64", optional = true }