[package]
name = "euphrates_cli"
version = "0.1.0"
authors = ["Michael Benfield <mike.benfield@gmail.com>"]

[[bin]]
name = "euphrates"
path = "src/main.rs"
doc = false

[dependencies]
euphrates = { path = "../euphrates" }
euphrates_sdl2 = { path = "../euphrates_sdl2" }
euphrates_x64 = { path = "../euphrates_x64", optional = true }
sdl2 = "0.31"
clap = "2.31"
failure = "0.1.1"